--- a/alfred_perception/CMakeLists.txt
+++ b/alfred_perception/CMakeLists.txt
@@ -5,20 +5,42 @@ if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
+
 # find dependencies
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(std_msgs REQUIRED)
+find_package(sensor_msgs REQUIRED)
 # uncomment the following section in order to fill in
 # further dependencies manually.
 # find_package(<dependency> REQUIRED)
 
-add_executable(talker src/publisher_lambda_function.cpp)
-ament_target_dependencies(talker rclcpp std_msgs)
+# Specify include directories
+include_directories(
+  include
+)
 
+# Declare your executable target
+add_executable(mainPerception 
+  src/mainPerception.cpp
+  src/AprilTagDetector_class.cpp
+  )
+
+# Link the executable to the required ROS2 libraries
+ament_target_dependencies(mainPerception rclcpp std_msgs)
+
+
+
+# Add Executables to directory
 install(TARGETS
-  talker
+  mainPerception
   DESTINATION lib/${PROJECT_NAME})
+
+# Install header files
+install(DIRECTORY include/
+  DESTINATION include/
+)
+
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
