--- a/alfred_bringup/launch/alfred_launch.yaml
+++ b/alfred_bringup/launch/alfred_launch.yaml
@@ -3,6 +3,7 @@ launch:
 # - include:
 #     file: "$(find-pkg-share ros_gz_sim)/launch/gz_sim.launch.py world_sdf_file:=/home/phd/dev/ros2_ws/autonomousCar/alfred_sim/worlds/world.sdf"
 
+# Launch World Simulation
 - executable: 
     cmd: gz sim -v 1 -r /home/phd/dev/ros2_ws/autonomousCar/alfred_sim/worlds/world.sdf
 
