--- a/alfred_perception/package.xml
+++ b/alfred_perception/package.xml
@@ -14,6 +14,9 @@
 
   <depend>rclcpp</depend>
   <depend>std_msgs</depend>
+  <depend>sensor_msgs</depend>
+  <depend>cv_bridge</depend>
+  <depend>opencv2</depend>
 
   <export>
     <build_type>ament_cmake</build_type>
