--- a/alfred_perception/package.xml
+++ b/alfred_perception/package.xml
@@ -17,6 +17,7 @@
   <depend>sensor_msgs</depend>
   <depend>cv_bridge</depend>
   <depend>opencv2</depend>
+  <depend>apriltag</depend>
 
   <export>
     <build_type>ament_cmake</build_type>
