--- a/alfred_perception/package.xml
+++ b/alfred_perception/package.xml
@@ -18,6 +18,7 @@
   <depend>cv_bridge</depend>
   <depend>opencv2</depend>
   <depend>apriltag</depend>
+  <depend>yaml-cpp</depend>
 
   <export>
     <build_type>ament_cmake</build_type>
