--- a/alfred_bringup/config/ros_gz_bridge.yaml
+++ b/alfred_bringup/config/ros_gz_bridge.yaml
@@ -26,10 +26,10 @@
 #  Vehicle Pose
 - ros_topic_name: "/vehicle/pose"
   gz_topic_name: "/model/tugbot/pose"
-  ros_type_name: "geometry_msgs/msg/Pose"
+  ros_type_name: "geometry_msgs/msg/TransformStamped"
   gz_type_name: "gz.msgs.Pose"
-  subscriber_queue: 5       # Default 10
-  publisher_queue: 6        # Default 10
+  subscriber_queue: 50       # Default 10
+  publisher_queue: 50        # Default 10
   lazy: false                # Default "false"
   direction: GZ_TO_ROS  # Default "BIDIRECTIONAL" - Bridge both directions
                             # "GZ_TO_ROS" - Bridge Gz topic to ROS
