--- a/alfred_navigation/package.xml
+++ b/alfred_navigation/package.xml
@@ -12,6 +12,15 @@
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
 
+  <depend>rclcpp</depend>
+  <depend>std_msgs</depend>
+  <depend>sensor_msgs</depend>
+  <depend>geometry_msgs</depend>
+  <depend>tf2_ros</depend>
+  <depend>tf2</depend>
+  <depend>yaml-cpp</depend>
+
+
   <export>
     <build_type>ament_cmake</build_type>
   </export>
