--- a/alfred_navigation/src/cfg/navigation_cfg.yaml
+++ b/alfred_navigation/src/cfg/navigation_cfg.yaml
@@ -1,11 +1,11 @@
 static_transforms:
   frame1:
-    frame_id: "world"
-    child_frame_id: "base_link"
+    frame_id: "base_link"
+    child_frame_id: "tugbot/scan_omni/scan_omni"
     translation:
+      - -0.1855
       - 0.0
-      - 0.0
-      - 0.2
+      - 0.5318
     rotation:
       - 0.0
       - 0.0
@@ -34,18 +34,18 @@ static_transforms:
       - 0.0
   frame4:
     frame_id: "base_link"
-    child_frame_id: "camera_front"
+    child_frame_id: "front_cam"
     translation:
       - 0.0553
       - 0.0
       - 0.4323
     rotation:
+      - -1.5708
       - 0.0
-      - 0.0
-      - 0.0
+      - -1.5708
   frame5:
     frame_id: "base_link"
-    child_frame_id: "camera_back"
+    child_frame_id: "back_cam"
     translation:
       - -0.241
       - 0.0
@@ -76,16 +76,32 @@ static_transforms:
       - 0.0
       - 0.0
       - 3.141592654
-  frame8:
-    frame_id: "base_link"
-    child_frame_id: "tugbot/scan_omni/scan_omni"
+  # frame8:
+  #   frame_id: "world"
+  #   child_frame_id: "base_link"
+  #   translation:
+  #     - -0.8
+  #     - 0.0
+  #     - 0.0
+  #   rotation:
+  #     - 0.0
+  #     - 0.0
+  #     - 0.0
+
+
+dynamic_transforms:
+  frame1:
+    frame_id: "world"
+    child_frame_id: "base_link"
     translation:
-      - -0.1855
+      - -0.8
       - 0.0
-      - 0.5318
+      - 0.0
     rotation:
       - 0.0
       - 0.0
       - 0.0
+
+
 
 test: "Config File is working"
