--- a/alfred_perception/package.xml
+++ b/alfred_perception/package.xml
@@ -8,6 +8,7 @@
   <license>Apache-2.0</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>rosidl_default_generators</buildtool_depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
@@ -19,6 +20,13 @@
   <depend>opencv2</depend>
   <depend>apriltag</depend>
   <depend>yaml-cpp</depend>
+  <depend>alfred_interfaces</depend>
+  
+  <build_depend>rosidl_typesupport_fastrtps_cpp</build_depend>
+  <exec_depend>rosidl_typesupport_fastrtps_cpp</exec_depend>
+  <exec_depend>rosidl_default_runtime</exec_depend>
+  <member_of_group>rosidl_interface_packages</member_of_group>
+  <build_depend>rosidl_default_runtime</build_depend>
 
   <export>
     <build_type>ament_cmake</build_type>
